[build-system]
requires = [
    "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "lib_dzne_tsv"
version = "0.0.0"
description = "Libary for handling tsv-data."
readme = "README.rst"
authors = [
    { name = "Johannes Programming", email = "johannes-programming@posteo.org" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = []
requires-python = ">=3.11"

[project.license]
file = "LICENSE.txt"
