[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lib-dzne-tsv"
version = "0.3.0"
description = "Libary for handling tsv-data. "
license = { file = "LICENSE" }
authors = [{ name = "Johannes Horler", email = "johannes.horler@dzne.de" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    'pandas>=1.4.2',
    'lib-dzne-filedata>=0.4.1',
]
requires-python = ">=3.11"

