[build-system]
requires = [
    "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "lib_dzne_tsv"
version = "0.2.3"
description = "Libary for handling tsv-data."
readme = "README.rst"
authors = [
    { name = "Johannes Programming", email = "johannes-programming@posteo.org" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    'pandas>=1.4.2',
    'lib-dzne-filedata>=0.4.0',
    'simple_tsv>=1.0.0',
]
requires-python = ">=3.11"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/lib-dzne-tsv/#files"
Source = "https://github.com/johannes-programming/lib_dzne_tsv" 
